# RoboWork-Mobile-Maniupulator

./: CMakeLists.txt  package.xml
config/: mobile_manipulation_params.yaml
launch/: main.launch
ros-gym-mobile-manipulation-summer_project/: README.md
ros-gym-mobile-manipulation-summer_project/scripts/: getObservationSpace.py  getPose.py  plot_graph.py  test1.py
ros-gym-mobile-manipulation-summer_project/scripts/ppo_implementation/: mobile_manipulation.py  ppo_runner.py
ros-gym-mobile-manipulation-summer_project/scripts/robowork_envs/robot_envs/: test.py
ros-gym-mobile-manipulation-summer_project/scripts/robowork_envs/task_envs/: __init__.py
scripts/: base_arm_publisher.py  joint_limits_service.py  topic_watcher.py
scripts/ppo_implementation/: ppo.py
scripts/robowork_envs/robot_envs/: bvrSIM_env.py
scripts/robowork_envs/task_envs/: bvrSIM_mobile_grasp.py
temp/: bvr_SIM_sandbox.launch  bvr_sandbox.world  notes.txt
